# cft-riscv-vm

./: Cargo.toml
src/: cpu.rs  main.rs
src/instruction/: format.rs  mod.rs  rv32i.rs
