[package]
name = "cft-riscv-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1"
color-eyre = "0.6.2"
tracing = "0.1.37"

[dev-dependencies]
tracing-subscriber = "0.3.17"
object = "0.31.1"
tempfile = "3.6.0"
